fix intro, company texts add button hiding of callback on mobile view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -281,11 +281,18 @@ input {
     background-color: #f2f2eb;
     padding: 5px 10px;
   }
+  
   tr {
     background-color: #ffffff;
   }
+
   tr:nth-child(odd) {
     background-color: #f2f2eb;
+  }
+
+  .nowr {
+    display: inline;
+    white-space: nowrap;
   }
 }
 
